# furnace

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  4-7 Snare.fui  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PLEASE_HEEEEEELP_AHHH.md  README.md  SunsoftBass.fui  TODO.md  The Last Judgement.fur  Time Tracks.fur  buildme.bat  code_of_conduct.md  contribution_guide.md  fork_changelog.md  jokes.md  nes_fds.h  todo_list.md  zh.po
.github/: issue_template.md  pull_request_template.md
.github/issue_template/: issue.yml
.github/workflows/: android.yml  build.yml
amongus/: RtMidiConfigUninstall.cmake.in
android/: build.gradle  gradle.properties
android/app/: build.gradle
demos/: AY-3-8910_Jam.fur  Another_winter.fur  BEANS-amiga.fur  Bullet_Hell.fur  C64 junk.fur  Cafe - 010 Editor 2.0crk.fur  ChaosTune[6581+8580].fur  Checknobankh.fur  Contraduct Design OPL3 Cover.fur  DOOM_E1M3.fur  Doomsday Zone (NDS).fur  FDS TEST.fur  FEDMS.fur  Funky_Bubbles_OPL3.fur  Fusion.fur  GEN Equinox Intro.fur  GranularFurn[6581+Amiga].fur  HoldOn.fur  Ice_Wind_OPMSPCM.fur  Kraid's Lair.fur  Lagrange_Point.fur  L’ambreSong.fur  MMXStageClear.fur  Melody_of_Certain_Feelings.fur  Moon.fur  Phoenix_cover.fur  README.md  Red_Planet.fur  Redbull MegaMan and WildCherry Triton - MM2 - Alien.fur  Rise_against_the_ashes_to_the_new_dawn.fur  Road_Rash_Grass_Valley_Lynx_01d.fur  Rusty_-_Queen_in_the_Dark_Night.fur  SeeingRed.fur  Silver Surfer - Stage Music 1.fur  Solar_Man_Genesis.fur  Strange Memories of Death (Multichip).fur  The_only_thing_the_Metallix_fear_is_you_Forte....fur  UNATCOPCM.fur  Utter Determination YM2610B.fur  atmosphere.fur  (+49 more)
demos/TODO/: Fly to the Leaden Sky.fur  Furnace-tan VS the spirit of the Mask.fur  REPROGRAMMED.fur  SHIN_YA.fur  Slow Brew.fur  evilevilsong.fur  hittingtherevlimiter.fur  notreallyfm.fur  tech_low_qual_era.fur
demos/a2600/: Balmeranda.fur  Coconut_Mall.fur  Funky_Afternoon.fur  Slam_the_Door.fur  TIADeepIntoCode.fur  Watch My Tone.fur  atari breakbeat.fur  twin.fur
demos/amiga/: Ibiza.fur  The Amigamen.fur  a_wave_powerhouse.fur  bruno_time.fur  furnace0.6crk.fur  m7 vibe.fur  serendipid.fur  trance_dream.fur
demos/arcade/: Basecamp.fur  Changsha_DnB_Inferno_NamcoNA1.fur  Crystal Dimension Section 2 WSG Mix.fur  Destiny_Islands_Irem_M92.fur  Eternal_Forest_TaitoArcade.fur  Hexionology.fur  Ice_Wind_SegaPCM.fur  JoyfulStart_Seta.fur  Maximum_Overdrive_NamcoWSG.fur  Neo_Seaside_Volley_Court_NeoGeo.fur  Physics_Exam_TaitoArcade.fur  QSound_smile.fur  REPROGRAMMED.fur  Ryu's Stage (CPS-1).fur  SHIN_YA.fur  Salamander_Starfield.fur  Slow Brew.fur  Surasshu Eek! (CPS2).fur  ToHeart_QoH98_TPower_Asuka120Style.fur  Tubelectric_Fictional_Arcade.fur  U.N. Owen Was Her (NS2).fur  UT99_Run_TaitoArcade.fur  UnreaL ][  PM (QSound).fur  close_encounter_NeoGeo.fur  eek_qsound.fur  ice_cap_NamcoC30.fur  iji_tor_segaxboard.fur  iji_tor_segaxboard_cover.fur  last_day_of_summer_NamcoC15.fur  living crystal cave.fur  physics_exam.fur  plok-boss-wsg.fur  sans_TaitoArcade.fur  the_machines_are_socialising_SegaPCM.fur  trance_TaitoArcade.fur
demos/ay8910/: AY-3-8910_Jam.fur  AyMate.fur  Drifting in Colour.fur  Flat Wave Society.fur  Second_Addition.fur  cardboardmywater.fur  demoscenetypebeat.fur  light.fur  remark_music.fur  the curse of the forest.fur  vibe_zone.fur
demos/ay8930/: AY8930Shuffle.fur  Obscure_Temptation.fur  One_Minute_Waltz.fur  PlayingOnTheStairs.fur  Playing_On_The_Stairs.fur  Red_Planet.fur  duty fun.fur  joyful.fur  joyful_.fur  powerful-sample-generator.fur
demos/beepers/: GreenIdeas_PET.fur
demos/blank/: 5 AM Sunrise.fur  Electric Blanket.fur  Electrical Inteference.fur  Empty Aquatic.fur  Exquisite Invitation.fur  Finally We Have Met Again.fur  For the 19 bonus points NES DPCM only.fur  Planet Zero-Algorima.fur  README.md  SURVIVE.fur  Super_Instrumentless_Echo_Synth_Demonstration.fur  The Emptyness.fur  WHERE DID I PUT IT.fur  Wandering.fur  emotional_blackmail.fur  enterthering.fur  hope_in_a_time_of_monsters.fur  map01.fur  oh_no.fur  samba_do_SID.fur  sawvibes.fur  they dont know im empty inside.fur  waytoohard.fur
demos/c64/: BelayOn.fur  C64 junk.fur  Curfew.fur  DOOM_E1M1.fur  FairlightC64.fur  Hellcharger.fur  LowBeatz.fur  PICOHOTCREDITS.fur  RememberMe.fur  The_Snippet.fur  UnreeealSuperhero3.fur  deadlock.fur  sparta_extended_remix_but_sid.fur  yeah!.fur
demos/capcomarc/: ComicPartytrack20.fur
demos/esfm/: AAAA.fur  Deadline.fur  (+44 more)
doc/: README.md
instruments/: README.md
papers/: clipboard-format.md  export-tech.md  format.md  icons.md  multiplayer.md  newIns.md  oldIns.md  oldflags.md  wavetable.md  zsm-format.md
po/: README.md  Reorganize-po-sequence.py  de.po  es.po  fi.po  fr.po  furnace.pot  hy.po  id.po  ja.po  ko.po  merge.py  nl.po  pl.po  pt_BR.po  ru.po  sk.po  sv.po  th.po  tr.po  uk.po  zh.po  zh_HK.po
res/: AppRun  Info.plist  furnace.appdata.xml  furnace.appdata.xml.in  furnace.desktop  furnace.rc  icon.icns  icons.sfd  intro.fur  make-appdata.sh  make-icon.sh  make-iconfont.sh  make-tile.sh  mime.xml  tile.data.pal  watermark.raw  watermark2.raw
scripts/: Cross-Linux-aarch64.cmake  Cross-Linux-armhf.cmake  Cross-MinGW-x86.cmake  Cross-MinGW-x86_64.cmake  Cross-MinGW.cmake  Reorganize-po-sequence.sh  build-po.sh  deps  patch_xp.c  release-linux-AppImage.sh  release-linux-aarch64.sh  release-linux-armhf.sh  release-linux.sh  release-mac.sh  release-win.sh  release-win32.sh  release-win64.sh  release-winconsole.sh  release-winxp.sh  update-po.sh
src/: backtrace.cpp  baseutils.cpp  baseutils.h  dummy.c  fileutils.cpp  fileutils.h  fixedQueue.h  hashUtils.cpp  hashUtils.h  log.cpp  main.cpp  pch.cpp  pch.h  stringutils.cpp  stringutils.h  subprocess.cpp  subprocess.h  ta-log.h  ta-utils.h  timeutils.cpp  timeutils.h  utfutils.cpp  utfutils.h  winMain.cpp
src/engine/platform/sound/c64/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  sid.cc  sid.h  siddefs.h  siddefs.h.in  voice.h
test/: assert_delta.c  furnace-test.sh  last-stage.sh  scspdspasm_test.cpp
tools/: scspdspasm_test.cpp
(+3220 files in other folders)
